Fixing overwrite and save slice permissions for a give role (#298)
* Fixing overwrite and save slice permissions for a give role

* fix function name - build failed

* fix function name and test user permissions

* disable the button in the UI

* fix build error - characters too long in 1 line

* try to disable button on the UI

* disable cursor in caravel css. You wont be able to click anymore if no access

* fix build issues

* fix build errors! god bless me

* disable main features in dashboard and slice

* fix build issues

--- a/caravel/assets/stylesheets/caravel.css
+++ b/caravel/assets/stylesheets/caravel.css
@@ -29,6 +29,10 @@ input.form-control {
     color: red;
 }
 
+.disabledButton {
+    pointer-events: none;
+}
+
 .col-left-fixed {
     width:350px;
     position: absolute;
